@@ -1,3 +1,7 @@
+2007-01-29  David Makovský (Yakeen) <yakeen@sannyas-on.net>
+
+	* POTFILES.in: Added files that contains translatable strings
+	
 2006-01-15  Wade Berrier  <wberrier@novell.com>
 
 	* POTFILES.in: Update to reflect removed files from r71023:
